# dot-ls

./: .gitignore  .gitmodules  CMakeLists.txt  CMakelists.txt  LICENSE  Makefile  README.md  RECOMMENDED_STRUCTURE.md  conanfile.txt
.github/workflows/: cmake-multi-platform.yml
client/: README.md  client.lua  run_test.sh  test.lua  test_completion.lua  test_document.lua
include/app/: app.hpp
include/application/: app.hpp
include/basis/boot/: boot.hpp  flag.hpp
include/basis/common/: ring_buffer.hpp
include/basis/lsp/: lsp.hpp
include/complete/: complete.hpp  keyword.hpp
include/domain/entity/: document.hpp  session.hpp
include/domain/lsp/: app.hpp  diagnostic.hpp  document.hpp  keyword.hpp  lifecycle.hpp
include/domain/model/: basic.hpp  document.hpp  flag.hpp  language.hpp  lifecycle.hpp  window.hpp
include/domain/service/: app.hpp  complete.hpp  diagnostic.hpp  document.hpp  keyword.hpp  language.hpp  lifecycle.hpp
include/infra/boot/: boot.hpp
include/infra/common/: ring_buffer.hpp
include/infra/config/: boot.hpp  flag.hpp
include/infra/formatter/: dot_formatter.hpp
include/infra/parser/: tree_sitter_adapter.hpp
include/infra/transport/: session.hpp
include/infra/treesitter/: treesitter.cpp
include/interface/: server.hpp
include/lsp/: basic.hpp  document.hpp  language.hpp  lifecycle.hpp
include/lsp/complete/: complete.hpp
include/protocol/lsp/: basic.hpp  document.hpp  flag.hpp  language.hpp  lifecycle.hpp  window.hpp
include/server/: server.hpp
include/treesitter/: treesitter.hpp
src/: main.cpp
test/: graph.dot  jsonrpc.hpp  main.cpp
tree-sitter-dot/: Cargo.toml  package.json
tree-sitter-dot/src/: grammar.json  node-types.json  parser.c
tree-sitter-dot/src/tree_sitter/: parser.h
